# fast_tut

./: .env.example  .gitignore  pyproject.toml
app/: config.py  database.py  logging_conf.py  main.py  tasks.py
app/routers/: post.py
app/tests/: conftest.py
app/tests/routers/: test_post.py
