[tool.poetry]
name = "fast-tut"
version = "0.1.0"
description = ""
authors = ["mikehentges <mhentges@comcast.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
httpx = "^0.27.2"
sqlalchemy = "^2.0.35"
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.15.0"}
rich = "^13.9.2"
asgi-correlation-id = "^4.3.3"
python-json-logger = "^2.0.7"
logtail-python = "^0.3.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
